--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
 <!-- <div style="background-image: url(images/wood.png); width: 100vw; height: 50vh", class="img_relative carouselgradient"> -->
 
 <div class="container_relative ipadcarou" id="quoteelon">
-
   <div style="background-color: #131313; width: 100vw; height: 100vh" class="container_one quote_container quotezero">
     <p class="sixtysix">&#8220;</p>
     <div class="quote embossed container_two quotezero">Life is so short you can't waste even a day subscribing to what someone thinks you can do versus knowing what you can do.
@@ -150,6 +149,13 @@
     <p class="ninetynine">&#8221;</p>
   </div>
 
+		<div style="background: red;
+  background: -webkit-linear-gradient(to top, rgba(19,19,19,0), rgba(19,19,19,1)); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(to top, rgba(19,19,19,0), rgba(19,19,19,1)); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(to top, rgba(19,19,19,0), rgba(19,19,19,1)); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to top, rgba(19,19,19,0), rgba(19,19,19,1)); /* Standard syntax */ 
+height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5vh; width: 100vw; z-index: 1000; top: 0;" >&nbsp;
+	</div>
 	<div style="background: red;
   background: -webkit-linear-gradient(to bottom, rgba(19,19,19,0), rgba(19,19,19,1)); /* For Safari 5.1 to 6.0 */
   background: -o-linear-gradient(to bottom, rgba(19,19,19,0), rgba(19,19,19,1)); /* For Opera 11.1 to 12.0 */
