--- a/portfolio-coding1.html
+++ b/portfolio-coding1.html
@@ -27,7 +27,9 @@
 <!-- <div class="carolcarolcon Desktop"> -->
 <div class="container_carousel" id="carousel">
 	
-	<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
+	
+		<div class="container-fluid ninetywidth ipad displaynone">
+			<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
@@ -35,8 +37,7 @@
 			</td>
 		</tr>
 	</table> 
-	<center>
-		<div class="container-fluid ninetywidth ipad displaynone">
+			<center>
 			<div class="col-md-12 nopadding">  
 				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-336_x_280/21-BD10503-BLG-MandA-A-336_x_280.html" width="336" height="280" frameborder="0"></iframe>
 
@@ -44,14 +45,24 @@
 				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-728_x_90/21-BD10503-BLG-MandA-A-728_x_90.html" width="728" height="90" frameborder="0"></iframe>
 				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Mobile-MandA-Design-A-320_x_100/21-BD10503-BLG-MandA-A-320_x_100.html" width="320" height="100" frameborder="0"></iframe>
 				</div>
+				</center>
 		</div>
 		<div class="container-fluid ninetywidth imac displaynone">
+			<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
+			<tr>
+				<td>
+					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
+			<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;"><span style="color:dodgerblue;">BLG M&amp;A Google ads</span> in various sizes for Desktop and Mobile | 2022</p>
+			</td>
+		</tr>
+	</table> 
+			<center>
 			<div class="col-md-12 nopadding">  
 				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-336_x_280/21-BD10503-BLG-MandA-A-336_x_280.html" width="336" height="280" frameborder="0"></iframe>
 				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Mobile-MandA-Design-A-320_x_100/21-BD10503-BLG-MandA-A-320_x_100.html" width="320" height="100" frameborder="0"></iframe>
 			</div>
+				</center>
 		</div>
-	</center>
 
 </div>
 	
