--- a/portfolio-coding2.html
+++ b/portfolio-coding2.html
@@ -27,7 +27,9 @@
 <!-- <div class="carolcarolcon Desktop"> -->
 <div class="container_carousel" id="carousel">
 	
-	<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
+	<div class="container-fluid ninetywidth ipad displaynone">
+		
+		<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
@@ -35,21 +37,33 @@
 			</td>
 		</tr>
 	</table> 
-<center>
-	<div class="container-fluid ninetywidth ipad displaynone">
+		
+		<center>
 		<div class="col-md-12 nopadding">  <br><br><br>
 			 
 			<iframe src="images/20-BD10049 VAN-FIRM-BCBusiness_Magazine-March2021-HTML_728x90/20-BD10049 VAN-FIRM-BCBusiness_Magazine-March2021-HTML_728x90.html" width="728" height="90" frameborder="1" padding="100px"></iframe><br><br><br><br><br>
 			<iframe src="images/20-BD10049 VAN-FIRM-BCBusiness_Magazine-March2021-HTML_300x250/20-BD10049 VAN-FIRM-BCBusiness_Magazine-March2021-HTML_300x250.html" width="300" height="250" frameborder="1"></iframe>
 		  	</div>
+		</center>
 	</div>
 	<div class="container-fluid ninetywidth imac displaynone">
+		
+		<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
+			<tr>
+				<td>
+					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
+			<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;"><span style="color:dodgerblue;">BLG Beyond Google ads</span> in various sizes for Desktop and Mobile | 2021</p>
+			</td>
+		</tr>
+	</table> 
+		
+		<center>
 		<div class="col-md-12 nopadding">  
 		<br><br><br>
 			<iframe src="images/20-BD10049 VAN-FIRM-BCBusiness_Magazine-March2021-HTML_300x250/20-BD10049 VAN-FIRM-BCBusiness_Magazine-March2021-HTML_300x250.html" width="300" height="250" frameborder="1"></iframe>
 	  	</div>
+		</center>
 	</div>
-</center>
 
 </div>
 	
