--- a/portfolio-coding3.html
+++ b/portfolio-coding3.html
@@ -27,7 +27,9 @@
 <!-- <div class="carolcarolcon Desktop"> -->
 <div class="container_carousel" id="carousel">
 	
-	<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
+	
+	<div class="container-fluid ninetywidth ipad displaynone">
+		<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
@@ -35,19 +37,28 @@
 			</td>
 		</tr>
 	</table> 
-	<center>
-	<div class="container-fluid ninetywidth ipad displaynone">
-		<div class="col-md-12 nopadding">  <br>
-			 
+		
+		<div class="col-md-12 nopadding">  
+			<center>
+			<br> 
 			<iframe src="images/ALM-Ad/20-BD9864-ALM-Sep-1400x320_v4.html" width="1400" height="320" frameborder="1" padding="100px" class="alm"></iframe>
-			
-	</div>
+			</center>
 		</div>
-	</center>
+		</div>
 	<div class="container-fluid ninetywidth imac displaynone">
+			<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
+			<tr>
+				<td>
+					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
+			<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;">BLG Helping you Navigate Ad | 2020</p>
+			</td>
+		</tr>
+	</table> 
+		<center>
 		<div class="col-md-12 nopadding">  
 			<iframe src="images/ALM-Ad/20-BD9864-ALM-Sep-1400x320_v4.html" width="500" height="320" frameborder="1" padding="100px" class="alm"></iframe>
 	  	</div>
+		</center>
 	</div>
 </div>
 	
