--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -27,28 +27,41 @@
 <!-- <div class="carolcarolcon Desktop"> -->
 <div class="container_carousel" id="carousel">
 	
-	<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
+	<div class="container-fluid ninetywidth ipad displaynone">
+		
+		<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
 				<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;" >Motion graphics and social video examples | 2017 - present</p>
-			</td>
-		</tr>
-	</table> 
-	<center>
-	<div class="container-fluid ninetywidth ipad displaynone">
+				</td>
+			</tr>
+		</table>
+		<center>
 		<div class="col-md-12 nopadding">  
 			<iframe src="images/Edwin_Au_Motion-Portfolio-2023.pdf#toolbar=0" width="800px" height="458px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
 			</iframe>
 	  	</div>
+		</center>
 	</div>
-	</center>
+	
 	<div class="container-fluid ninetywidth imac displaynone">
+		
+	<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
+			<tr>
+				<td>
+					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
+				<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;" >Motion graphics and social video examples | 2017 - present</p>
+				</td>
+			</tr>
+		</table>
 		<div class="col-md-12 nopadding">  
+			<center>
 			<a href="images/Edwin_Au_Motion-Portfolio-2023-motion.pdf">
 				<iframe src="images/Edwin_Au_Motion-Portfolio-2023-motion.pdf#toolbar=0" width="120%" height="942px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
 				</iframe>
 			</a>
+		</center>
 	  	</div>
 	</div>
 </div>
