--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -33,7 +33,7 @@
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
-				<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;" >Motion graphics and social video examples | 2017 - present</p>
+				<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;" >Motion graphics and social video examples |&nbsp;2017 - present</p>
 				</td>
 			</tr>
 		</table>
@@ -73,22 +73,22 @@
 	<table align="left" style="margin:auto;" height="50px" index="1000" class="portfolio-nav">
 	
 	<tr align="left" padding-bottom="50px" margin-top="20px">
-		<td style="text-align: left; width: 350px;" ><p style="color:black; font-weight: bold; font-size: 22px; font-family: 'Lato', sans-serif; padding-top: 10px; text-decoration: none">Portfolios:</p>
+		<td style="text-align: left; width: 350px;" ><p style="color:black; font-weight: bold; font-size: 15pt; font-family: 'Lato', sans-serif; padding-top: 10px; text-decoration: none">Portfolios:</p>
 		</td>
 	</tr>
 		
 	<tr align="left" padding-bottom="50px" margin-top="20px">
 
-		<td style="text-align: left; width: 350px;" ><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; padding-top: 10px;">&bull; <u>Product and Product Experience Design</u></p></a>
+		<td style="text-align: left; width: 350px;" ><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 13pt; font-family: 'Lato', sans-serif; padding-top: 10px;">&bull; <u>Product and Product Experience Design</u></p></a>
 		</td>
 	</tr>
 		
 		<tr align="center" padding-bottom="50px" margin-top="20px">
 		
-		<td style="text-align: left; width: 350px; "><a href="https://edwinau.github.io/edwin-landing/portfolio-coding1.html" ><p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px;">&bull; <u>Html, CSS &amp; JS</u></p></a>
+		<td style="text-align: left; width: 350px; "><a href="https://edwinau.github.io/edwin-landing/portfolio-coding1.html" ><p style="color:blue; font-size: 13pt; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px;">&bull; <u>Html, CSS &amp; JS</u></p></a>
 		</td></tr>
 		
-		<tr><td style="text-align: left; width: 350px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:green; font-size: 14px; font-family: 'Lato', sans-serif; padding-top: 10px;">&#62; <u>Motion Graphics and Social Videos</u></p></a>
+		<tr><td style="text-align: left; width: 350px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:green; font-size: 13pt; font-family: 'Lato', sans-serif; padding-top: 10px;">&#62; <u>Motion Graphics and Social Videos</u></p></a>
 		</td>
 	</tr>
 	</table>
