--- a/portfolio-coding2.html
+++ b/portfolio-coding2.html
@@ -74,30 +74,30 @@
 	<table align="left" style="margin:auto;" height="50px" index="1000" class="portfolio-nav">
 	
 	<tr align="left" padding-bottom="50px" margin-top="20px">
-		<td style="text-align: left; width: 350px;" ><p style="color:black; font-weight: bold; font-size: 22px; font-family: 'Lato', sans-serif; padding-top: 10px; text-decoration: none">Portfolios:</p>
+		<td style="text-align: left; width: 350px;" ><p style="color:black; font-weight: bold; font-size: 15pt; font-family: 'Lato', sans-serif; padding-top: 10px; text-decoration: none">Portfolios:</p>
 		</td>
 	</tr>
 		
 	<tr align="left" padding-bottom="50px" margin-top="20px">
 
-		<td style="text-align: left; width: 350px;" ><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; padding-top: 10px;">&bull; <u>Product and Product Experience Design</u></p></a>
+		<td style="text-align: left; width: 350px;" ><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 13pt; font-family: 'Lato', sans-serif; padding-top: 10px;">&bull; <u>Product and Product Experience Design</u></p></a>
 		</td>
 	</tr>
 		
 		<tr align="center" padding-bottom="50px" margin-top="20px">
 		
 		<td style="text-align: left; width: 350px; ">
-			<p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px;">&#709; <u>Html, CSS &amp; JS</u></p>
+			<p style="color:blue; font-size: 13pt; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px;">&#709; <u>Html, CSS &amp; JS</u></p>
 			
 			<a href="https://edwinau.github.io/edwin-landing/portfolio-coding1.html" >
-				<p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;">&bull; <u>BLG M&amp;A Goodgle Ads (2022)</u></p></a>
+				<p style="color:blue; font-size: 13pt; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;">&bull; <u>BLG M&amp;A Goodgle Ads (2022)</u></p></a>
 			<a href="https://edwinau.github.io/edwin-landing/portfolio-coding2.html" >
-				<p style="color:green; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;">&#62; <u>BLG Beyond Google Ads (2021)</u></p></a>
+				<p style="color:green; font-size: 13pt; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;">&#62; <u>BLG Beyond Google Ads (2021)</u></p></a>
 			<a href="https://edwinau.github.io/edwin-landing/portfolio-coding3.html" >
-				<p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;" class="ipad displaynone">&bull; <u>Helping you Navigate Ad (2020)</u></p></a>
+				<p style="color:blue; font-size: 13pt; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;" class="ipad displaynone">&bull; <u>Helping you Navigate Ad (2020)</u></p></a>
 			</td></tr>
 		
-		<tr><td style="text-align: left; width: 350px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:blue; font-size: 14px; font-family: 'Lato', sans-serif; padding-top: 10px;">&bull; <u>Motion Graphics and Social Videos</u></p></a>
+		<tr><td style="text-align: left; width: 350px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:blue; font-size: 13pt; font-family: 'Lato', sans-serif; padding-top: 10px;">&bull; <u>Motion Graphics and Social Videos</u></p></a>
 		</td>
 	</tr>
 	</table>
