--- a/portfolio-coding1.html
+++ b/portfolio-coding1.html
@@ -115,7 +115,7 @@
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
 <div class="container_two contact">
       <div class="container_contacts">
-        <h4 class="email"><a href="mailto:edwinfcau@gmail.com?subject= Hi Edwin" class="email">edwinfcau@gmail.com</a></h4>
+        <h4 class="email"><a href="mailto:edwinfcau@gmail.com" class="email">edwinfcau@gmail.com</a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
 		  <br class="imac displaynone"><br class="imac displaynone">
         <h4 class="linkedin" title="Click to view LinkedIn"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
