--- a/portfolio-coding1.html
+++ b/portfolio-coding1.html
@@ -33,7 +33,7 @@
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
-			<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;"><span style="color:dodgerblue;">BLG M&amp;A Google ads</span> in various sizes for Desktop and Mobile | 2022</p>
+			<p class="port-heading"><span style="color:dodgerblue;">BLG M&amp;A Google ads</span> in various sizes for Desktop and Mobile |&nbsp;2022</p>
 			</td>
 		</tr>
 	</table> 
@@ -52,7 +52,7 @@
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
-			<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;"><span style="color:dodgerblue;">BLG M&amp;A Google ads</span> in various sizes for Desktop and Mobile | 2022</p>
+			<p class="port-heading"><span style="color:dodgerblue;">BLG M&amp;A Google ads</span> in various sizes for Desktop and Mobile |&nbsp;2022</p>
 			</td>
 		</tr>
 	</table> 
