--- a/portfolio-coding3.html
+++ b/portfolio-coding3.html
@@ -33,7 +33,7 @@
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
-			<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;">BLG Helping you Navigate Ad | 2020</p>
+			<p class="port-heading">BLG Helping you Navigate Ad |&nbsp;2020</p>
 			</td>
 		</tr>
 	</table> 
@@ -50,7 +50,7 @@
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
-			<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;">BLG Helping you Navigate Ad | 2020</p>
+			<p class="port-heading">BLG Helping you Navigate Ad |&nbsp;2020</p>
 			</td>
 		</tr>
 	</table> 
