--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -33,7 +33,7 @@
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
-				<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;" >Motion graphics and social video examples |&nbsp;2017 - present</p>
+				<p class="port-heading">Motion graphics and social video examples |&nbsp;2017 - present</p>
 				</td>
 			</tr>
 		</table>
@@ -51,7 +51,7 @@
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
-				<p style="font-size:16px; font-weight: bold; text-align: right; font-family: 'Lato', sans-serif; padding: 40px 10px 25px; background-color: #fff;" >Motion graphics and social video examples | 2017 - present</p>
+				<p class="port-heading">Motion graphics and social video examples | 2017 - present</p>
 				</td>
 			</tr>
 		</table>
