--- a/portfolio-clean-copy.html
+++ b/portfolio-clean-copy.html
@@ -153,11 +153,11 @@
     </label>
 
     <ul class="menu__box">
-	  <li><a class="menu__item-header" href="#">Portfolios:</a></li>
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio.html">Product and Product Experience Design</a></li>
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-coding1.html">Html, CSS &amp; JS</a></li>
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html">Motion Graphics and Social Videos</a></li>
-      <li><a class="menu__item-home" href="index.html">home</a></li>
+      <li><a class="menu__item" href="#">Home</a></li>
+      <li><a class="menu__item" href="#">About</a></li>
+      <li><a class="menu__item" href="#">Team</a></li>
+      <li><a class="menu__item" href="#">Contact</a></li>
+      <li><a class="menu__item" href="#">Twitter</a></li>
     </ul>
   </div>
 						
@@ -273,7 +273,7 @@
 	
 
 	
-<!--<div>
+<div>
 	<table align="left" height="50px" index="1000" class="portfolio-nav">
 	
 	<tr align="left" padding-bottom="50px" margin-top="20px">
@@ -296,7 +296,7 @@
 		</td>
 	</tr>
 	</table>
-</div>	-->
+</div>	
 	
 <div class="container_one contactpage" style="background: red;
   background: -webkit-linear-gradient(white, #ffb288, #f1b351); /* For Safari 5.1 to 6.0 */
@@ -325,7 +325,7 @@
 
 
 
-<!--<div class="totop"><a href="index.html" target="" title="top"><i class="fa fa-angle-double-left"></i>&nbsp;&nbsp;home</a></div>-->
+<div class="totop"><a href="index.html" target="" title="top"><i class="fa fa-angle-double-left"></i>&nbsp;&nbsp;home</a></div>
 
 
 </body>
