--- a/portfolio.html
+++ b/portfolio.html
@@ -273,7 +273,7 @@
 	
 
 	
-<!--<div>
+<div>
 	<table align="left" height="50px" index="1000" class="portfolio-nav">
 	
 	<tr align="left" padding-bottom="50px" margin-top="20px">
@@ -296,7 +296,7 @@
 		</td>
 	</tr>
 	</table>
-</div>	-->
+</div>
 	
 <div class="container_one contactpage" style="background: red;
   background: -webkit-linear-gradient(white, #ffb288, #f1b351); /* For Safari 5.1 to 6.0 */
@@ -325,7 +325,7 @@
 
 
 
-<!--<div class="totop"><a href="index.html" target="" title="top"><i class="fa fa-angle-double-left"></i>&nbsp;&nbsp;home</a></div>-->
+<div class="totop"><a href="index.html" target="" title="top"><i class="fa fa-angle-double-left"></i>&nbsp;&nbsp;home</a></div>
 
 
 </body>
