--- a/portfolio-coding-mobile.html
+++ b/portfolio-coding-mobile.html
@@ -28,33 +28,34 @@
 <!-- <div class="carolcarolcon Desktop"> -->
 <div class="container_carousel" id="carousel">
 	
-	<div class="container-fluid ninetywidth ipad displaynone">
-		
-		<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
+	
+		<div class="container-fluid ninetywidth ipad displaynone">
+			<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
-				<p class="port-heading">Motion graphics and social video examples |&nbsp;2017 - present</p>
-				</td>
+			<p class="port-heading"><span style="color:dodgerblue;">BLG M&amp;A Google ads</span> in various sizes for Desktop and Mobile |&nbsp;2022</p>
+			</td>
+		</tr>
+	</table> 
+			<center>
+			<div class="col-md-12 nopadding">  
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-336_x_280/21-BD10503-BLG-MandA-A-336_x_280.html" width="336" height="280" frameborder="0"></iframe>
 
-			</tr>
-		</table>
-		<center>
-		<div class="col-md-12 nopadding">  
-			<iframe src="images/Edwin_Au_Motion-Portfolio-2023.pdf#toolbar=0" width="800px" height="458px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
-			</iframe>
-	  	</div>
-		</center>
-	</div>
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-930_x_180/21-BD10503-BLG-MandA-A-930_x_180.html" width="930" height="180" frameborder="0"></iframe>
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-728_x_90/21-BD10503-BLG-MandA-A-728_x_90.html" width="728" height="90" frameborder="0"></iframe>
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Mobile-MandA-Design-A-320_x_100/21-BD10503-BLG-MandA-A-320_x_100.html" width="320" height="100" frameborder="0"></iframe>
+				</div>
+				</center>
+		</div>
 	
-	<div class="container-fluid ninetywidth imac displaynone">
-		
-	<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
+		<div class="container-fluid ninetywidth imac displaynone">
+			<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
-				<p class="port-heading">Motion graphics and social video examples |&nbsp;2017 - present</p>
-				</td>
+			<p class="port-heading"><span style="color:dodgerblue;">BLG M&amp;A Google ads</span> in various sizes for Desktop and Mobile |&nbsp;2022</p>
+			</td>
 <div class="hamburger-menu">
     <input id="menu__toggle" type="checkbox" />
     <label class="menu__btn" for="menu__toggle">
@@ -69,17 +70,23 @@
       <li><a class="menu__item-home" href="index.html">home</a></li>
     </ul>
   </div>
-			</tr>
-		</table>
-		<div class="col-md-12 nopadding">  
+		</tr>
+	</table> 
 			<center>
-			<a href="images/Edwin_Au_Motion-Portfolio-2023-motion.pdf">
-				<iframe src="images/Edwin_Au_Motion-Portfolio-2023-motion.pdf#toolbar=0" width="120%" height="942px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
-				</iframe>
-			</a>
-		</center>
-	  	</div>
-	</div>
+			<div class="col-md-12 nopadding">  
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Desktop-MandA-Design-A-336_x_280/21-BD10503-BLG-MandA-A-336_x_280.html" width="336" height="280" frameborder="0"></iframe>
+				<iframe src="images/21-BD10503-MA-HTML-Ads-Design-A/Mobile-MandA-Design-A-320_x_100/21-BD10503-BLG-MandA-A-320_x_100.html" width="320" height="100" frameborder="0"></iframe>
+				<p class="port-heading"><span style="color:dodgerblue;">BLG Beyond Google ads</span> in various sizes for Desktop and Mobile | 2021</p>
+				<iframe src="images/20-BD10049 VAN-FIRM-BCBusiness_Magazine-March2021-HTML_300x250/20-BD10049 VAN-FIRM-BCBusiness_Magazine-March2021-HTML_300x250.html" width="300" height="250" frameborder="1"></iframe>
+			</div>
+				
+
+				
+			
+
+				</center>
+		</div>
+
 </div>
 	
 	
@@ -89,22 +96,30 @@
 	<table align="left" style="margin:auto;" height="50px" index="1000" class="portfolio-nav">
 	
 	<tr align="left" padding-bottom="50px" margin-top="20px">
-		<td style="text-align: left; width: 350px;" ><p class="nav-title">Portfolios:</p>
+		<td style="text-align: left; width: 350px;" ><p style="color:black; font-weight: bold; font-size: 15pt; font-family: 'Lato', sans-serif; padding-top: 10px; text-decoration: none">Portfolios:</p>
 		</td>
 	</tr>
 		
 	<tr align="left" padding-bottom="50px" margin-top="20px">
 
-		<td style="text-align: left; width: 350px;" ><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p class="nav-heading-inactive">&bull; <u>Product and Product Experience Design</u></p></a>
+		<td style="text-align: left; width: 350px;" ><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p style="color:blue; font-size: 13pt; font-family: 'Lato', sans-serif; padding-top: 10px;">&bull; <u>Product and Product Experience Design</u></p></a>
 		</td>
 	</tr>
 		
 		<tr align="center" padding-bottom="50px" margin-top="20px">
 		
-		<td style="text-align: left; width: 350px; "><a href="https://edwinau.github.io/edwin-landing/portfolio-coding1.html" ><p class="nav-heading-inactive">&bull; <u>Html, CSS &amp; JS</u></p></a>
+		<td style="text-align: left; width: 350px; ">
+			<p style="color:blue; font-size: 13pt; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px;">&#709; <u>Html, CSS &amp; JS</u></p>
+			<a href="https://edwinau.github.io/edwin-landing/portfolio-coding1.html" >
+				<p style="color:green; font-size: 13pt; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;">&#62; <u>BLG M&amp;A Goodgle Ads (2022)</u></p></a>
+			<a href="https://edwinau.github.io/edwin-landing/portfolio-coding2.html" >
+				<p style="color:blue; font-size: 13pt; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;">&bull; <u>BLG Beyond Google Ads (2021)</u></p></a>
+			<a href="https://edwinau.github.io/edwin-landing/portfolio-coding3.html" >
+				<p style="color:blue; font-size: 13pt; font-family: 'Lato', sans-serif; index:1000; padding-top: 10px; padding-left:15px;" class="ipad displaynone">&bull; <u>Helping you Navigate Ad (2020)</u></p></a>
+			
 		</td></tr>
 		
-		<tr><td style="text-align: left; width: 350px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p class="nav-heading-active">&#62; <u>Motion Graphics and Social Videos</u></p></a>
+		<tr><td style="text-align: left; width: 350px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p style="color:blue; font-size: 13pt; font-family: 'Lato', sans-serif; padding-top: 10px;">&bull; <u>Motion Graphics and Social Videos</u></p></a>
 		</td>
 	</tr>
 	</table>
@@ -128,7 +143,7 @@
 		  <br class="imac displaynone"><br class="imac displaynone">
         <h4 class="linkedin" title="Click to view LinkedIn"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
-        <!-- <h4 class="facebook" title="Click to view facebook (Currently Inactive)"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4> -->
+      <!--  <h4 class="facebook" title="Click to view facebook (Currently Inactive)"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4> -->
 		  <br class="imac displaynone"><br class="imac displaynone">
         <h4 class="instagram" title="+14168803791"><a href="tel:+14168803791" title="+14168803791"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
