--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -53,7 +53,7 @@
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
-				<p class="port-heading">Motion graphics and social video examples |&nbsp;2017 - present</p>
+				<p class="port-heading">Motion graphics and social video examples<br>|&nbsp;2017 - present</p>
 				</td>
 <div class="hamburger-menu">
     <input id="menu__toggle" type="checkbox" />
