new madness added git status

--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -41,7 +41,7 @@
 		</table>
 		<center>
 		<div class="col-md-12 nopadding">  
-			<iframe src="images/Edwin_Au_Motion-Portfolio-2023.pdf#toolbar=0" width="800px" height="458px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
+			<iframe src="images/Edwin_Au_Motion-Portfolio-2023.pdf#toolbar=0" width="800px" height="600px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
 			</iframe>
 	  	</div>
 		</center>
@@ -53,7 +53,7 @@
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
-				<p class="port-heading">Motion graphics and social video examples<br>|&nbsp;2017 - present</p>
+				<p class="port-heading">Blakes Madness XII |&nbsp;2018</p>
 				</td>
 <div class="hamburger-menu">
     <input id="menu__toggle" type="checkbox" />
@@ -73,10 +73,7 @@
 		</table>
 		<div class="col-md-12 nopadding">  
 			<center>
-			<a href="images/Edwin_Au_Motion-Portfolio-2023-motion.pdf">
-				<iframe src="images/Edwin_Au_Motion-Portfolio-2023-motion.pdf#toolbar=0" width="120%" height="942px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
-				</iframe>
-			</a>
+			<video autoplay muted src="Images/Madness_Digital_Screen_Final-Web.mp4" width="96VW" height="auto" frameborder="0"></video>
 		</center>
 	  	</div>
 	</div>
