fixing more ipad and phone

--- a/portfolio-madness.html
+++ b/portfolio-madness.html
@@ -41,7 +41,7 @@
 		<div class="col-md-12 nopadding">  
 			<center>
 			<br> 
-			<video autoplay muted src="Images/Madness_Digital_Screen_Final-Web.mp4" width="600px" height="auto" frameborder="1" padding="50px"></video>
+			<video autoplay loop muted playsinline src="Images/Madness_Digital_Screen_Final-Web.mp4" width="800px" height="auto" frameborder="1" padding="50px"></video>
 			</center>
 		</div>
 		</div>
@@ -50,13 +50,13 @@
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
-			<p class="port-heading">BLG Helping you Navigate Ad |&nbsp;2020</p>
+			<p class="port-heading">Blakes Madness |&nbsp;2018</p>
 			</td>
 		</tr>
 	</table> 
 		<center>
 		<div class="col-md-12 nopadding">  
-			<video autoplay muted src="Images/Madness_Digital_Screen_Final-Web.mp4" width="96VW" height="auto" frameborder="0"></video>
+			<video autoplay loop muted playsinline src="Images/Madness_Digital_Screen_Final-Web.mp4" width="96VW" height="auto" frameborder="0"></video>
 	  	</div>
 		</center>
 	</div>
@@ -64,7 +64,7 @@
 	
 	
 	
-
+<!--
 <div>
 	<table align="left" style="margin:auto;" height="50px" index="1000" class="portfolio-nav">
 	
@@ -97,7 +97,7 @@
 	</table>
 </div>	
 
-    
+    -->
 
 	
 <div class="container_one contactpage" style="background: red;
