--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -41,7 +41,7 @@
 		</table>
 		<center>
 		<div class="col-md-12 nopadding">  
-			<iframe src="images/Edwin_Au_Motion-Portfolio-2023.pdf#toolbar=0" width="800px" height="600px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
+			<iframe src="images/Edwin_Au_Motion-Portfolio-2023.pdf#toolbar=0" width="800px" height="500px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
 			</iframe>
 	  	</div>
 		</center>
@@ -73,7 +73,12 @@
 		</table>
 		<div class="col-md-12 nopadding">  
 			<center>
-			<video autoplay muted src="Images/Madness_Digital_Screen_Final-Web.mp4" width="96VW" height="auto" frameborder="0"></video>
+			<video autoplay muted playsinline src="Images/Madness_Digital_Screen_Final-Web.mp4" width="96VW" height="auto" frameborder="0"></video>
+				
+			<p class="port-heading">Top Technology M &amp; A Trends |&nbsp;2023</p>
+
+			<iframe autoplay muted playsinline src="Images/23-BD11225-Tech-MandA-SMARP-v3-Compressed.gif" width="100vw	" height="auto" frameborder="0"></iframe>
+
 		</center>
 	  	</div>
 	</div>
