changes to captial I in images and updated Ipad to 1200 | 800

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
 				</div>  
 
 				<div class="item" >
-				<p class="port-heading-org">My favourite HTML, CSS and JS project at Blakes.<br> Blakes event eVite for <i>Shania Twain in Concert</i> |&nbsp;2018</p>
+				<p class="port-heading-org">One of my favourite HTML, CSS and JS projects at Blakes.<br> Blakes event eVite for <i>Shania Twain in Concert</i> |&nbsp;2018</p>
 				  <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2b.jpg" class="portfolio_images">
 				</div>  
 
@@ -203,7 +203,7 @@
 
 				
 			<div class="item">
-			<p class="port-heading">My favourite HTML, CSS and JS project at Blakes.<br> Blakes event eVite for <i>Shania Twain in Concert</i> |&nbsp;2018</p>
+			<p class="port-heading">One of my favourite HTML, CSS and JS projects at Blakes.<br> Blakes event eVite for <i>Shania Twain in Concert</i> |&nbsp;2018</p>
               <img alt="Carousel Bootstrap Third" src="images/HTML_Porfolio-2023-2-mobile.jpg" class="portfolio_images-mobile">
             </div>
 				
