more gif madness and Tech MA codes

--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -73,11 +73,11 @@
 		</table>
 		<div class="col-md-12 nopadding">  
 			<center>
-			<video autoplay muted playsinline src="images/mages/Madness_Digital_Screen_Final-Web.mp4" width="96VW" height="auto" frameborder="0"></video>
+			<video autoplay muted playsinline src="images/Madness_Digital_Screen_Final-Web.mp4" width="100%" height="auto" frameborder="0"></video>
 				
 			<p class="port-heading">Top Technology M &amp; A Trends |&nbsp;2023</p>
 
-			<iframe autoplay muted playsinline src="images/23-BD11225-Tech-MandA-SMARP-v3-Compressed.gif" width="100vw	" height="auto" frameborder="0"></iframe>
+			<img src="images/23-BD11225-Tech-MandA-SMARP-v3-Compressed.gif" alt="Edwin-BLG-MabdA-gif" width="auto" height="auto" frameborder="0" overflow="hidden" align="center" >
 
 		</center>
 	  	</div>
