--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -33,9 +33,23 @@
 		<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
 			<tr>
 				<td>
-					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
+					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="margin-left: auto; margin-right: auto; width: 100%;">
 				<p class="port-heading">Motion graphics and social video examples |&nbsp;2017 - present</p>
 				</td>
+<div class="hamburger-menu">
+    <input id="menu__toggle" type="checkbox" />
+    <label class="menu__btn" for="menu__toggle">
+      <span></span>
+    </label>
+
+    <ul class="menu__box">
+	  <li><a class="menu__item-header" href="#">Portfolios:</a></li>
+      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio.html">Product and Product Experience Design</a></li>
+      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-coding-mobile.html">Html, CSS &amp; JS</a></li>
+      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html">Motion Graphics and Social Videos</a></li>
+      <li><a class="menu__item-home" href="index.html">home</a></li>
+    </ul>
+  </div>
 
 			</tr>
 		</table>
@@ -73,11 +87,11 @@
 		</table>
 		<div class="col-md-12 nopadding">  
 			<center>
-			<video autoplay muted playsinline src="images/Madness_Digital_Screen_Final-Web.mp4" width="100%" height="auto" frameborder="0"></video>
-				
-			<p class="port-heading">Top Technology M &amp; A Trends |&nbsp;2023</p>
+			<video autoplay loop muted playsinline src="images/Madness_Digital_Screen_Final-Web.mp4" width="100%" height="auto" frameborder="0"></video>
+				<br><br><br>
+			<p class="port-heading">BLG - Social Media Gif Animated Loop |&nbsp;2023</p>
 
-			<img src="images/23-BD11225-Tech-MandA-SMARP-v3-Compressed.gif" alt="Edwin-BLG-MabdA-gif" width="auto" height="auto" frameborder="0" overflow="hidden" align="center" >
+			<img src="images/23-BD11225-Tech-MandA-SMARP-v3-Compressed.gif" alt="Edwin-BLG-MabdA-gif" width="100%" height="auto" frameborder="0" overflow="hidden" align="center" >
 
 		</center>
 	  	</div>
