fixing all hamburgers and logic

--- a/portfolio-madness.html
+++ b/portfolio-madness.html
@@ -14,6 +14,9 @@
     <link href="stylesheet/carousel_portfolio-coding.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/contact_portfolio-coding.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/media_labtop_portfolio-coding.css" type="text/css" rel="stylesheet">
+	  	<link href="stylesheet/hamburger.css" type="text/css" rel="stylesheet">
+	<link href="stylesheet/hamburger2.css" type="text/css" rel="stylesheet">
+
     <script src="https://apjax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
@@ -69,6 +72,20 @@
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
 			<p class="port-heading">Blakes Madness |&nbsp;2018</p>
 			</td>
+				<div class="hamburger-menu">
+    <input id="menu__toggle2" type="checkbox" />
+    <label class="menu__btn" for="menu__toggle2">
+      <span></span>
+    </label>
+
+    <ul class="menu__box">
+	  <li><a class="menu__item-header" href="#">Portfolios:</a></li>
+      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio.html">Product and Product Experience Design</a></li>
+      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-coding-mobile.html">Html, CSS &amp; JS</a></li>
+      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html">Motion Graphics and Social Videos</a></li>
+      <li><a class="menu__item-home" href="index.html">home</a></li>
+    </ul>
+  </div>
 		</tr>
 	</table> 
 		<center>
