--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -15,6 +15,8 @@
     <link href="stylesheet/contact_portfolio-coding.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/media_labtop_portfolio-coding.css" type="text/css" rel="stylesheet">
 	<link href="stylesheet/hamburger.css" type="text/css" rel="stylesheet">
+	  	<link href="stylesheet/hamburger2.css" type="text/css" rel="stylesheet">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
@@ -70,8 +72,8 @@
 				<p class="port-heading">Blakes Madness XII |&nbsp;2018</p>
 				</td>
 <div class="hamburger-menu">
-    <input id="menu__toggle" type="checkbox" />
-    <label class="menu__btn" for="menu__toggle">
+    <input id="menu__toggle2" type="checkbox" />
+    <label class="menu__btn" for="menu__toggle2">
       <span></span>
     </label>
 
