--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,8 @@
     <link href="stylesheet/contact_portfolio-coding.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/media_labtop_portfolio-coding.css" type="text/css" rel="stylesheet">
 	<link href="stylesheet/hamburger.css" type="text/css" rel="stylesheet">
+	  	<link href="stylesheet/hamburger2.css" type="text/css" rel="stylesheet">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
@@ -29,7 +31,6 @@
 <div class="container_carousel" id="carousel">
 	
 		  	
-	
  <div class="container-fluid ninetywidth ipad displaynone">
 	  
 	  <table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
@@ -162,8 +163,8 @@
 						</td>
 						
 <div class="hamburger-menu">
-    <input id="menu__toggle" type="checkbox" />
-    <label class="menu__btn" for="menu__toggle">
+    <input id="menu__toggle2" type="checkbox" />
+    <label class="menu__btn" for="menu__toggle2">
       <span></span>
     </label>
 
