new hamburger 2 rules testing

--- a/portfolio.html
+++ b/portfolio.html
@@ -161,18 +161,18 @@
 							<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
 						</td>
 						
-<div class="hamburger-menu">
-    <input id="menu__toggle2" type="checkbox" />
-    <label class="menu__btn" for="menu__toggle2">
+<div class="hamburger-menub">
+    <input id="menu__toggleb" type="checkbox" />
+    <label class="menu__btnb" for="menu__toggleb">
       <span></span>
     </label>
 
-    <ul class="menu__box">
-	  <li><a class="menu__item-header" href="#">Portfolios:</a></li>
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio.html">Product and Product Experience Design</a></li>
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-coding-mobile.html">Html, CSS &amp; JS</a></li>
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html">Motion Graphics and Social Videos</a></li>
-      <li><a class="menu__item-home" href="index.html">home</a></li>
+    <ul class="menu__boxb">
+	  <li><a class="menu__item-headerb" href="#">Portfolios:</a></li>
+      <li><a class="menu__itemb" href="https://edwinau.github.io/edwin-landing/portfolio.html">Product and Product Experience Design</a></li>
+      <li><a class="menu__itemb" href="https://edwinau.github.io/edwin-landing/portfolio-coding-mobile.html">Html, CSS &amp; JS</a></li>
+      <li><a class="menu__itemb" href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html">Motion Graphics and Social Videos</a></li>
+      <li><a class="menu__item-homeb" href="index.html">home</a></li>
     </ul>
   </div>
 						
