--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 
   <body>
 
-
     <div class="container_one intro" style="background: -webkit-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: -o-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: -moz-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
@@ -46,7 +45,7 @@
           <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
 		  <h2 class="center button-row"><a href="portfolio.html" title="PORTFOLIO"></a></h2>
         <!--  <h2 class="right button-row"><a href="#rendezlogo" target="" title="RendezYou"></a></h2> -->
-          <h2 class="right_right button-row"><a href="#contactme" title="CONTACT"></a></h2>
+          <h2 class="right_right button-row"><a href="#" title="CONTACT"></a></h2>
         </div>
       </div>
 	  <div style="background: red;
@@ -164,9 +163,6 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
 				height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5vh; width: 100vw; z-index: 1000; bottom: 0;" >&nbsp;
 	</div>
 </div>
-
-
-	  
 	  
  <!-- contact page -->
 
@@ -175,9 +171,10 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
   background: -o-linear-gradient(#131313, #003c5f, #33273d, ivory, #FC9C54, #f1b351); /* For Opera 11.1 to 12.0 */
   background: -moz-linear-gradient(#131313, #003c5f, #33273d, #ee5d6c, #FC9C54, #f1b351); /* For Firefox 3.6 to 15 */
   background: linear-gradient(#131313, #003c5f, #33273d, #ee5d6c, #FC9C54, #f1b351); /* Standard syntax */
-  " >
-  <img src="images/city_contact.png" class="img_contact" id="contactme" alt="city">
-  <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
+  ">
+	  <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
+
+  <img src="images/city_contact.png" class="img_contact" alt="city">
     <div class="container_two contact">
       <div class="container_contacts">
         <h4 class="email"><a href="mailto:edwinfcau@gmail.com" class="email">edwinfcau@gmail.com</a></h4>
@@ -187,16 +184,13 @@ height:5vh; index:1000; bottom:0;  position: absolute; display: flex; height: 5v
 		  <br class="imac displaynone"><br class="imac displaynone">
        <!-- <h4 class="facebook" title="Click to view Facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4> -->
 		  <br class="imac displaynone"><br class="imac displaynone">
-        <h4 class="instagram" title="+14168803791"><a href="tel:+14168803791" title="+14168803791"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></h4>
+        <h4 class="instagram" title="+14168803791"><a href="tel:+14168803791" title="+14168803791" id="contactme"><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></a></h4>
 		  <br class="imac displaynone"><br class="imac displaynone">
       </div>
     </div>
 </div>
 
 <!-- <div class="totop"><a href="#backtotop" target="" title="top"><i class="fa fa-angle-double-up"></i>top</a></div> -->
-
-
-
 
 </body>
 
