--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -15,12 +15,9 @@
     <link href="stylesheet/contact_portfolio-coding.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/media_labtop_portfolio-coding.css" type="text/css" rel="stylesheet">
 	<link href="stylesheet/hamburger.css" type="text/css" rel="stylesheet">
-	  	<link href="stylesheet/hamburger2.css" type="text/css" rel="stylesheet">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
-
-    <link href="stylesheet/font-awesome.min.css" rel="stylesheet" >
+	<link href="stylesheet/font-awesome.min.css" rel="stylesheet" >
     <title>edwinau.com</title>
 
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -28,16 +25,7 @@
   </head>
 <body>
 <!-- <div class="carolcarolcon Desktop"> -->
-<div class="container_carousel" id="carousel">
 	
-	<div class="container-fluid ninetywidth ipad displaynone">
-		
-		<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
-			<tr>
-				<td>
-					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="margin-left: auto; margin-right: auto; width: 100%;">
-				<p class="port-heading">Motion graphics and social video examples |&nbsp;2017 - present</p>
-				</td>
 <div class="hamburger-menu">
     <input id="menu__toggle" type="checkbox" />
     <label class="menu__btn" for="menu__toggle">
@@ -51,8 +39,17 @@
       <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html">Motion Graphics and Social Videos</a></li>
       <li><a class="menu__item-home" href="index.html">home</a></li>
     </ul>
-  </div>
-
+</div>
+<div class="container_carousel" id="carousel">
+	
+	<div class="container-fluid ninetywidth ipad displaynone">
+		
+		<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
+			<tr>
+				<td>
+					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White.jpg" class="headermred" style="margin-left: auto; margin-right: auto; width: 100%;">
+				<p class="port-heading">Motion graphics and social video examples |&nbsp;2017 - present</p>
+				</td>
 			</tr>
 		</table>
 		<center>
@@ -62,29 +59,13 @@
 	  	</div>
 		</center>
 	</div>
-	
 	<div class="container-fluid ninetywidth imac displaynone">
-		
-	<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
+		<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
 			<tr>
 				<td>
 					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
 				<p class="port-heading">Blakes Madness XII |&nbsp;2018</p>
 				</td>
-<div class="hamburger-menu">
-    <input id="menu__toggle2" type="checkbox" />
-    <label class="menu__btn" for="menu__toggle2">
-      <span></span>
-    </label>
-
-    <ul class="menu__box">
-	  <li><a class="menu__item-header" href="#">Portfolios:</a></li>
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio.html">Product and Product Experience Design</a></li>
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-coding-mobile.html">Html, CSS &amp; JS</a></li>
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html">Motion Graphics and Social Videos</a></li>
-      <li><a class="menu__item-home" href="index.html">home</a></li>
-    </ul>
-  </div>
 			</tr>
 		</table>
 		<div class="col-md-12 nopadding">  
@@ -92,10 +73,8 @@
 			<video autoplay loop muted playsinline src="images/Madness_Digital_Screen_Final-Web.mp4" width="100%" height="auto" frameborder="0"></video>
 				<br><br><br>
 			<p class="port-heading">BLG - Social Media Gif Animated Loop |&nbsp;2023</p>
-
-			<img src="images/23-BD11225-Tech-MandA-SMARP-v3-Compressed.gif" alt="Edwin-BLG-MabdA-gif" width="100%" height="auto" frameborder="0" overflow="hidden" align="center" >
-
-		</center>
+				<img src="images/23-BD11225-Tech-MandA-SMARP-v3-Compressed.gif" alt="Edwin-BLG-MabdA-gif" width="100%" height="auto" frameborder="0" overflow="hidden" align="center" >
+			</center>
 	  	</div>
 	</div>
 </div>
@@ -104,29 +83,26 @@
 	
 
 <div>
-	<table align="left" style="margin:auto;" height="50px" index="1000" class="portfolio-nav">
+	<table align="left" height="50px" index="1000" class="portfolio-nav">
 	
 	<tr align="left" padding-bottom="50px" margin-top="20px">
 		<td style="text-align: left; width: 350px;" ><p class="nav-title">Portfolios:</p>
 		</td>
 	</tr>
-		
 	<tr align="left" padding-bottom="50px" margin-top="20px">
-
-		<td style="text-align: left; width: 350px;" ><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p class="nav-heading-inactive">&bull; <u>Product and Product Experience Design</u></p></a>
+		<td style="text-align: left; width: 350px;" ><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p class="nav-heading-inactive">&#62; <u>Product and Product Experience Design</u></p></a>
 		</td>
 	</tr>
-		
-		<tr align="center" padding-bottom="50px" margin-top="20px">
-		
+	<tr align="center" padding-bottom="50px" margin-top="20px">
 		<td style="text-align: left; width: 350px; "><a href="https://edwinau.github.io/edwin-landing/portfolio-coding1.html" ><p class="nav-heading-inactive">&bull; <u>Html, CSS &amp; JS</u></p></a>
-		</td></tr>
-		
-		<tr><td style="text-align: left; width: 350px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p class="nav-heading-active">&#62; <u>Motion Graphics and Social Videos</u></p></a>
+		</td>
+	</tr>
+	<tr>
+		<td style="text-align: left; width: 350px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p class="nav-heading-active">&bull; <u>Motion Graphics and Social Videos</u></p></a>
 		</td>
 	</tr>
 	</table>
-</div>	
+</div>
 
     
 
