--- a/portfolio.html
+++ b/portfolio.html
@@ -271,19 +271,16 @@
 		<td style="text-align: left; width: 350px;" ><p class="nav-title">Portfolios:</p>
 		</td>
 	</tr>
-		
 	<tr align="left" padding-bottom="50px" margin-top="20px">
-
 		<td style="text-align: left; width: 350px;" ><a href="https://edwinau.github.io/edwin-landing/portfolio.html" ><p class="nav-heading-active">&#62; <u>Product and Product Experience Design</u></p></a>
 		</td>
 	</tr>
-		
-		<tr align="center" padding-bottom="50px" margin-top="20px">
-		
+	<tr align="center" padding-bottom="50px" margin-top="20px">
 		<td style="text-align: left; width: 350px; "><a href="https://edwinau.github.io/edwin-landing/portfolio-coding1.html" ><p class="nav-heading-inactive">&bull; <u>Html, CSS &amp; JS</u></p></a>
-		</td></tr>
-		
-		<tr><td style="text-align: left; width: 350px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p class="nav-heading-inactive">&bull; <u>Motion Graphics and Social Videos</u></p></a>
+		</td>
+	</tr>
+	<tr>
+		<td style="text-align: left; width: 350px;"><a href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html" ><p class="nav-heading-inactive">&bull; <u>Motion Graphics and Social Videos</u></p></a>
 		</td>
 	</tr>
 	</table>
