Got ipad on mobile views fixed

--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -63,7 +63,7 @@
 		<table style="max-width: 900px; background-color: #000000; margin-left: auto; margin-right: auto; width: 100%;">
 			<tr>
 				<td>
-					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="display: block; margin-left: auto; margin-right: auto; width: 100%;">
+					<img alt="Carousel Bootstrap Second" src="images/2022-Address-Header-White-mob.jpg" class="headermred" style="margin-left: auto; margin-right: auto; width: 100%;">
 				<p class="port-heading">Blakes Madness XII |&nbsp;2018</p>
 				</td>
 			</tr>
@@ -84,7 +84,6 @@
 
 <div>
 	<table align="left" height="50px" index="1000" class="portfolio-nav">
-	
 	<tr align="left" padding-bottom="50px" margin-top="20px">
 		<td style="text-align: left; width: 350px;" ><p class="nav-title">Portfolios:</p>
 		</td>
