making basketball video and posted note gif responsive

--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -70,10 +70,10 @@
 		</table>
 		<div class="col-md-12 nopadding">  
 			<center>
-			<video autoplay loop muted playsinline src="images/Madness_Digital_Screen_Final-Web.mp4" width="100%" height="auto" frameborder="0"></video>
+			<video autoplay loop muted playsinline src="images/Madness_Digital_Screen_Final-Web.mp4" width="100%" height="auto" frameborder="0" class="madnessvideobasketball"></video>
 				<br><br><br>
 			<p class="port-heading">BLG - Social Media Gif Animated Loop |&nbsp;2023</p>
-				<img src="images/23-BD11225-Tech-MandA-SMARP-v3-Compressed.gif" alt="Edwin-BLG-MabdA-gif" width="100%" height="auto" frameborder="0" overflow="hidden" align="center" >
+				<img src="images/23-BD11225-Tech-MandA-SMARP-v3-Compressed.gif" alt="Edwin-BLG-MabdA-gif" width="100%" height="auto" frameborder="0" overflow="hidden" align="center" class="madnessvideobasketball">
 			</center>
 	  	</div>
 	</div>
