posted note added on desktop and mobile gif sizes fixed

--- a/portfolio-motion-social.html
+++ b/portfolio-motion-social.html
@@ -56,7 +56,9 @@
 		<div class="col-md-12 nopadding">  
 			<iframe src="images/Edwin_Au_Motion-Portfolio-2023.pdf#toolbar=0" width="800px" height="500px" wmode="transparent" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" style="border:0;">
 			</iframe>
+			<img src="images/23-BD11225-Tech-MandA-SMARP-v3-Compressed.gif" alt="Edwin-BLG-MabdA-gif" width="100%" height="auto" frameborder="0" overflow="hidden" align="center" class="madnessvideobasketball postit">
 	  	</div>
+			
 		</center>
 	</div>
 	<div class="container-fluid ninetywidth imac displaynone">
