--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<div class="container-fluid nut">
           <div class="imac displaynone">
             <p class="hello" id="hello">Who I am<br>&amp; what I do...</p>
-            <p class="i_believe">I believe digital products should inspire and enhance people's lives.<br><span class="italic">Are we on the same page?</span><br><br>On a lighter note, whether at work or not,<br class="imac displaynone"> I take my pour over coffee pretty&nbsp;seriously.<br><br>When not at work, I enjoy spending time with<br class="imac displaynone"> my partner, going to the gym and collecting crystals &amp; gems.</p>
+            <p class="i_believe">I believe digital products should inspire and enhance people's lives.<br><span class="italic">Are we on the same page?</span><br><br>On a lighter note, whether at work or not,<br class="imac displaynone"> I take my pour over coffee pretty&nbsp;seriously.<br><br>When not at work, I enjoy spending time with<br class="imac displaynone"> my partner, going to the gym and collecting rare crystals &amp; gems.</p>
 			  
 
           </div>
