added resume prompt and new bio paragarph

--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
 	<div class="container_nut">
 		<div class="container-fluid nut">
           <div class="imac displaynone">
-            <p class="hello" id="hello">Who I am<br>&amp; what I do...</p>
-            <p class="i_believe">I believe digital products should inspire and enhance people's lives.<br><span class="italic">Are we on the same page?</span><br><br>On a lighter note, whether at work or not,<br class="imac displaynone"> I take my pour over coffee pretty&nbsp;seriously.<br><br>When not at work, I enjoy spending time with<br class="imac displaynone"> my partner, going to the gym and watching a good binge.</p>
+            <p class="hello" id="hello">Who I am<br>&amp; what I do</p>
+            <p class="i_believe">I believe there's a direct correlation between the evolution of human life with the evolution of digital products. Whether it's a mobile app or a desktop experience, it should be inuitive, informative and/or enhance efficiency, productitvity and creativity.<br><br>On a lighter note, whether at work or not,<br class="imac displaynone"> I take my pour over dark coffee pretty&nbsp;seriously.<br><br>When not at work, I enjoy spending time with<br class="imac displaynone"> my family, friends and partner, and going to the gym.  I'm always down&nbsp;for&nbsp;a good binge.</p>
 			  
 
           </div>
           <div class="row nut">
             <div class="col-md-10 ipad displaynone">
               <p class="hello">Who I am <br> &amp;what I do...</p><hr style="width: 85%;" class="ipad displaynone">
-             <p class="i_believe">I believe digital products should inspire<br> and enhance people's lives.<br> <span class="italic">Are we on the same page?</span><br><br>On a lighter note,<br>whether at work or not,<br>I&nbsp;take my pour over coffee pretty&nbsp;seriously.<br><br>When not at work, I enjoy spending time with my partner, going to the gym and watching a good binge.</p></div>
+             <p class="i_believe">I believe there's a direct correlation between the evolution of human life with the evolution of digital products. Whether in mobile apps or through desktop experiences, it should be inuitive, informative and/or enhance efficiency, productitvity and creativity.<br><br>On a lighter note,<br>whether at work or not,<br>I take my pour over dark coffee pretty&nbsp;seriously.  ☕<br><br>When not at work, I enjoy spending time with my family, friends and partner, and going to the gym. I'm always down&nbsp;for&nbsp;a&nbsp;good&nbsp;binge.</p></div>
 
             <div class="col-md-12" id="labtopresumewidth">
-              <a href="EDWIN AU.pdf" target="_blank"><img src="EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf"></a>
-            </div>
+			<p class="resume-prompt" style="color: white; font-family: 'Lato', serif; font-size: .9vw; letter-spacing: .1em; line-height: 2; opacity: 1; margins: auto; text-align: center;">Click on resume to view or download.</p><a href="EDWIN AU.pdf" target="_blank"><img src="EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf"></a>
+			  </div>
           </div>
         </div>
       </div>
