fixed resume prompt size and new portfolio rest hambuger text

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,11 +32,11 @@
     </label>
 
     <ul class="menu__box">
-	  <li><a class="menu__item-header" href="#">Portfolios:</a></li>
+	  <li class="menu__item-header">Portfolios:</li>
       <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio.html">Product and Product Experience Design</a></li>
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-coding-mobile.html">Html, CSS &amp; JS</a></li>
-      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html">Motion Graphics and Social Videos</a></li>
-      <li><a class="menu__item-home" href="index.html">home</a></li>
+      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-coding-mobile.html"> Html, CSS &amp; JS</a></li>
+      <li><a class="menu__item" href="https://edwinau.github.io/edwin-landing/portfolio-motion-social.html"> Motion Graphics and Social Videos</a></li>
+      <li><a class="menu__item-home" href="index.html">Home</a></li>
     </ul>
 </div>
 	
